# fastapi-starter

./: .env.example  .gitignore  README.md  alembic.ini  logging.ini  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 5542f52db07f_initial_migration.py
app/: main.py
app/alembic/: env.py
app/alembic/versions/: 196e45a2e9a7_edit_all_ids_of_models.py  c3c5f8eaaf16_initial_models.py  d6e04fc81906_add_cascade_delete_relationships.py  f8acf4899ab9_add_max_length_for_string_varchar.py
app/api/: main.py
app/api/v1/: api.py
app/api/v1/endpoints/: items.py
app/core/: config.py
app/schemas/: item.py
app/tests/api/routes/: test_login.py
requirements/: dev.txt
src/: database.py  main.py
src/auth/: models.py  router.py  schemas.py
src/posts/: models.py  router.py  schemas.py
tests/: conftest.py
tests/auth/: test_ping.py
tests/posts/: test_ping.py
tests/test_api/: test_items.py
